--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="window">
         <h1 class="priklad" id="h1"></h1>
         <input type="text" onchange="Kontrola()" id="value">
-        <h2 class="hodnoceni" id="hodnoceni">hodnocení</h2>
+        <h2 class="hodnoceni" id="hodnoceni">Tak se ukaž</h2>
         <h3 class="streak" id="streak">0</h3>
     </div>
 
