--- a/nasobeni.html
+++ b/nasobeni.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="mathicon.png">
     <link rel="stylesheet" href="scitani.css">
-    <title>Sčítání</title>
+    <title>Násobení</title>
 </head>
 
 <body>
