--- a/scitani.html
+++ b/scitani.html
@@ -20,7 +20,7 @@
         <h2 class="hodnoceni" id="hodnoceni">Tak se ukaž</h2>
         <h3 class="streak" id="streak">0</h3>
     </div>
-
+    <a class="button" href="index.html"><button>Zpět</button></a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="scitani.js"></script>
